--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-  schedule:
+  ## schedule:
     - cron: '0 12 * * FRI'
 
 jobs:
